--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ color: #ec376c;
 header{
   width: 1920px;
   height: 988px;
-  background: rgba(228,225,225,1.00);
+  background-color: aliceblue;
 }
 header img{
   width: 887px;
@@ -132,8 +132,15 @@ h4{
   margin: 30px auto 57px;
 }
 #post{
-	background-color: aliceblue;
+	background: rgb(240,248,255);
+background: linear-gradient(180deg, rgba(240,248,255,1) 0%, rgba(255,255,255,1) 100%);
 	padding-bottom: 200px;
+}
+.post-mini{
+	width: 1885px;
+	box-shadow: -0.3px 5px 46px 0 rgba(0, 0, 0, 0.03);
+	background-color: #ffffff;
+	margin: 0 auto;
 }
 .container{
 	width: 1206px;
@@ -198,6 +205,7 @@ h6{
 }
 .b5{
 	background-color: #734df2;
+	position: relative;
 }
 .b5 img{
 	width: 226px;
@@ -213,7 +221,9 @@ h6{
 .b5 i{
   color: #ffffff;
   font-size: 60px;
-  font-weight: 100;
+  position: absolute;
+  left: 166px;
+	top: 160px;
 }
 h8{
   margin-left: 785px;
