--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+html{
+	scroll-behavior: smooth;
+}
 .wrapper{
 	width: 1920px;
 	margin: 0 auto;
@@ -14,7 +17,7 @@ header span{
   font-size: 40px;
   color: #222222;
   margin-left: 104px;
-  margin-top: 66px;
+  margin-top: 60px;
   float: left;
 }
 header b{
@@ -24,6 +27,7 @@ header{
   width: 1920px;
   height: 988px;
   background-color: aliceblue;
+  position: relative;
 }
 header img{
   width: 887px;
@@ -43,7 +47,7 @@ header img{
   width: 101px;
   height: 3px;
   position: absolute;
-  top: 447px;
+  top: 475px;
   left: 1007px;
 }
 aside{
@@ -55,14 +59,11 @@ aside{
 	padding: 0;
 }
 nav{
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   letter-spacing: 0.63px;
   text-align: center;
   margin-top: 61px;
   font-family: PlayfairDisplay;
-  font-size: 18px;
+  font-size: 24px;
   
 }
 ul{
@@ -71,7 +72,7 @@ ul{
 li{
 	display: inline-block;
 	margin-left: -5px;
-	width: 15%;
+	padding: 0 40px;
 }
 a{
 	text-decoration: none;
@@ -79,6 +80,15 @@ a{
 }
 li:hover a{
 	color: #ec376c; 
+}
+.search{
+  border: 2px solid #ccc;
+  border-radius: 20px;
+  font-size: 24px;
+  background-color: white;
+  width: 200px;
+  height: 46px;
+	font-family: PlayfairDisplay;
 }
 h3{
   font-family: Merienda;
@@ -138,6 +148,7 @@ background: linear-gradient(180deg, rgba(240,248,255,1) 0%, rgba(255,255,255,1) 
 }
 .post-mini{
 	width: 1885px;
+	height: 1465px;
 	box-shadow: -0.3px 5px 46px 0 rgba(0, 0, 0, 0.03);
 	background-color: #ffffff;
 	margin: 0 auto;
@@ -375,4 +386,9 @@ footer p{
   text-align: center;
   color: #777777;
  padding-bottom: 50px;
+}
+@media screen and (max-width: 375px){
+	.wrapper{
+		width: 100vw;
+	}
 }
