--- a/main.css
+++ b/main.css
@@ -390,7 +390,7 @@ footer p{
 }
 @media screen and (max-width: 375px){
 	.wrapper{
-		width: 100%;
+		width: 100vw;
 	}
 	header span{
 /*  text-shadow: -0.3px 5px 13px rgba(0, 0, 0, 0.17);*/
