--- a/main.css
+++ b/main.css
@@ -12,6 +12,28 @@ html{
 	margin: 0 auto;
 /*	background-color: antiquewhite;*/
 }
+#scroll{
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 1000;
+  border: none;
+  outline: none;
+  background-color: #734df2;
+  color: white;
+  border-radius: 50%;
+  font-size: 40px;
+  line-height: 50px;
+  width: 50px;
+  height: 50px;
+}
+.fa-sort-up{
+	margin-top: 12px;
+}
+#scroll:hover{
+  background: #ec376c;
+}
 header span{
   text-shadow: -0.3px 5px 13px rgba(0, 0, 0, 0.17);
   font-family: Pacifico;
@@ -397,8 +419,8 @@ footer p{
 /*  font-family: Pacifico;*/
   font-size: 40px;
   color: #222222;
-/*  margin-left: 104px;*/
-/*  margin-top: 60px;*/
+  margin-left: none;
+  margin-top: none;
 /*  float: left;*/
 	width: 100vw;
 	text-align: center;
